<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="30sp"
        android:text="@string/titulo"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:paddingTop="20sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edad"
        android:inputType="textPersonName"
        android:paddingTop="20sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btEnviarDatos2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30sp"
        android:text="@string/enviarDatos"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <Button
        android:id="@+id/btAtras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Atras"
        android:textSize="24sp" />

</LinearLayout>