<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_principal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="265dp"
        android:layout_height="90dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="MENU PRINCIPAL"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <Button
        android:id="@+id/btn"
        android:layout_width="259dp"
        android:layout_height="67dp"
        android:fontFamily="sans-serif-black"
        android:text="SEMANA1"
        android:textSize="32sp"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <Button
        android:id="@+id/bt_semana3"
        android:layout_width="259dp"
        android:layout_height="67dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/btTi"
        android:textSize="32sp"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />

    <Button
        android:id="@+id/bt_semana4"
        android:layout_width="259dp"
        android:layout_height="67dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/se4"
        android:textSize="32sp"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.655" />

    <Button
        android:id="@+id/bt_semana5"
        android:layout_width="259dp"
        android:layout_height="67dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/se5"
        android:textSize="32sp"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795" />

    <Button
        android:id="@+id/bt_acerca_de"
        android:layout_width="259dp"
        android:layout_height="67dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/acer"
        android:textSize="32sp"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="259dp"
        android:layout_height="67dp"
        android:fontFamily="sans-serif-black"
        android:text="SEMANA2"
        android:textSize="32sp"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.373" />

</androidx.constraintlayout.widget.ConstraintLayout>